<resources>
    <string name="app_name">MaithiliTalk</string>
    <!-- Category name for phrases [CHAR LIMIT=20] -->
    <string name="category_clothes">Clothes</string>

    <!-- Category name for the vocabulary words for colors [CHAR LIMIT=20] -->
    <string name="category_colors">Colors</string>

    <!-- Category name for the vocabulary words for numbers [CHAR LIMIT=20] -->
    <string name="category_numbers">Numbers</string>

    <!-- Category name for the vocabulary words for family members [CHAR LIMIT=20] -->
    <string name="category_family">Family </string>
    <string name="category_phrases">Phrases</string>
    <string name="category_foods">Foods</string>
    <string name="category_moods">Moods</string>

    <string name="category_days">Days</string>
    <string name="banner_ad_unit_id">ca-app-pub-3459004490451586/9290362354</string>
</resources>
