<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tan_background"
    android:orientation="vertical"

    tools:context="android.application.flora.learnmaithili.MainActivity">

    <TextView
        android:id="@+id/numbers"
        style="@style/CategoryStyle"
        android:background="@color/category_numbers"
        android:text="@string/category_numbers"
        />


    <TextView
        android:id="@+id/clothes"
        style="@style/CategoryStyle"
        android:background="@color/category_clothes"
        android:text="@string/category_clothes" />
    <TextView
        android:id="@+id/phrases"
        style="@style/CategoryStyle"
        android:background="@color/category_phrases"
        android:text="@string/category_phrases" />
    <TextView
            android:id="@+id/family"
            style="@style/CategoryStyle"
            android:background="@color/category_family"
            android:text="@string/category_family" />
    <TextView
        android:id="@+id/foods"
        style="@style/CategoryStyle"
        android:background="@color/category_foods"
        android:text="@string/category_foods" />
    <TextView
        android:id="@+id/moods"
        style="@style/CategoryStyle"
        android:background="@color/category_moods"
        android:text="@string/category_moods" />
    <TextView
        android:id="@+id/colors"
        style="@style/CategoryStyle"
        android:background="@color/category_colors"
        android:text="@string/category_colors" />
    <TextView
        android:id="@+id/days"
        style="@style/CategoryStyle"
        android:background="@color/category_days"
        android:text="@string/category_days" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>
</LinearLayout>
</ScrollView>